--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body {
     font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
 }
+/*Se crea los estilos para el header*/
 a{
     text-decoration: none;
     cursor: pointer;
@@ -40,6 +41,106 @@ nav .nav-right-section .menu-icon{
     height: 25px;
 }
 nav .nav-right-section img{
-    border-radius: 50%;
+    
     margin-left: 10px;
+    width: 50px;
+    height: 50px;
 }
+/*Se crea los estilos para el main*/
+
+main {
+    margin-top: 150px;
+    text-align: center;
+
+}
+main .main-logo{
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+main .main-logo img{
+    width: 400px;
+    
+}
+main .main-input{
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+main .main-input-container{
+    width: 525px;
+    border-radius: 100px;
+    border: 1px solid #dfe1e5;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+main .main-input input{
+    width: 450px;
+    height: 40px;
+    border: none;
+    outline: none; 
+}
+
+main .main-input-container:hover {
+    box-shadow: 0 1px 6px 0 #20212447; 
+    border-color: #dfe1e500;
+}
+main .main-input .search-icon{
+    background-image: url(" https://cdn0.iconfinder.com/data/icons/google-material-design-3-0/48/ic_search_48px-512.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 18px;
+    height: 18px;
+}
+main .main-input .micro-icon{
+    background-image: url("https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+}
+
+main .main-button{
+    width: 530px;
+    margin:  0 auto;
+}
+main .main-button div{
+    display: inline-block;
+}
+main .main-button button{
+    height: 36px;
+    background-color: #f2f2f2;
+    border: 0;
+    font-size: 14px;
+    color: #5f6368;
+    border-radius: 5px;
+    padding: 0 15px;
+    margin-right: 15px;
+}
+main .main-button button:hover{
+    border: 1px solid #e8e8e9;
+    box-shadow: 0 1px 1px #000001;
+    color: #222; 
+}
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
